--- a/Edit.html
+++ b/Edit.html
@@ -90,7 +90,7 @@
 
 </head>
 
-<body class="antialiased ">
+<body class="antialiased  max-w-[150rem] md:mx-auto ">
     <div class="  hidden  bg-white px-14  w-full md:flex justify-between items-center py-4">
         <a href="./Feed.html">
             <img src="./assets//logo.png" class="  h-full w-24 mb-1" alt="">
@@ -266,7 +266,7 @@
         </div>
     </div>
 
-    <div class="md:h-[50vh] h-[40vh] !-z-[1]  md:pl-32 md:pt-28 pb-4 w-full bg-cover bg-bottom relative "
+    <div class="md:h-[36vh] h-[25vh] -mt-1 !-z-[1]  md:pl-32 md:pt-28 pb-4 w-full bg-cover bg-bottom relative "
         id="background-"
         style="background-image: url(./assets/mainblueclientba.jpg);  background-position: 50% 50%; background-size: cover;">
 
