--- a/Profile.html
+++ b/Profile.html
@@ -50,9 +50,9 @@
     </style>
 </head>
 
-<body class="antialiased ">
+<body class="antialiased  md:flex md:flex-col  md:mx-auto max-w-[150rem]">
 
-    <div class="  hidden  bg-white px-14  w-full md:flex justify-between items-center py-4">
+    <div class="  hidden  bg-white px-14 z-[700] w-full md:flex justify-between items-center py-4">
         <a href="./Feed.html">
             <img src="./assets//logo.png" class="  h-full w-24 mb-1" alt="">
         </a>
@@ -227,26 +227,26 @@
         </div>
     </div>
 
-    <img src="./assets//feed3.png" style="  background-position: 50% 50%; background-size: cover;" class=" z-[-1]
-    absolute md:h-[46%] h-[40%]  w-full object-cover bg-cover bg-bottom" alt="">
-    <div class="flex flex-col items-center justify-center">
+    <img src="./assets//feed3.png" style="  background-position: 50% 50%; background-size: cover;" class=" mt-0 z-[-1]
+    absolute md:h-[46%] h-[20%]  w-full xl:max-w-[150rem] md:w-full object-cover bg-cover bg-bottom" alt="">
+    <div class="flex flex-col  -mt-14 items-center justify-center">
         <div class="h-fit md:pl-40 flex items-center justify-center w-full pt-20 md:pt-32 pb-4 bg-cover bg-bottom relative"
             id="background-">
-            <div class="container md:items-start  items-center md:justify-start justify-center flex">
+            <div class="  md:items-start  w-full items-center md:justify-start justify-center flex">
                 <div>
 
                     <img src="./assets/Left.png"
-                        class="hover:scale-105 absolute w-10 left-4 md:left-10 top-10 cursor-pointer h-auto"
+                        class="hover:scale-105 absolute w-10 left-4 md:left-10 top-20 cursor-pointer h-auto"
                         id="goBackButton" alt="">
 
                 </div>
-                <div class="flex md:-mt-4 mt-10 md:max-w-6xl items-center md:items-end md:space-x-14 md:justify-start justify-center"
+                <div class="flex md:-mt-4 -mt-10  w-full  items-center md:items-end md:space-x-14 md:justify-start justify-center"
                     id="dashboardContainer">
                     <!-- Dynamic Dashboard Content -->
                 </div>
             </div>
         </div>
-        <div class="mt-2 md:pl-40 flex  items-center md:items-start  items-center  md:justify-start w-full">
+        <div class="mt-2 md:pl-40 flex  bg-white items-center md:items-start  items-center  md:justify-start w-full">
             <div class="md:block flex flex-col  items-center md:items-start justify-center p-6">
                 <div class="flex items-center md:items-start   justify-center md:justify-start">
                     <div class="flex flex-col items-center md:items-start gap-5 space-x-4">
@@ -275,10 +275,10 @@
     </div>
 
 
-    <hr class="mt-10 hidden md:block border-[#E5E5E5] md:border-[30px]">
+    <hr class="mt-28 hidden md:block border-[#E5E5E5] md:border-[25px]">
 
 
-    <div class=" md:py-10">
+    <div class=" md:py-10 bg-white">
         <div class="flex text-[12px] md:text-[22px] font-semibold justify-center items-center gap-10 md:gap-40 mt-10">
             <h1 class="tab-header text-[#1F41BB] hover:text-[#1F41BB] cursor-pointer" data-tab="Rimarks">
                 Rimarks (4)
