--- a/Rewards.html
+++ b/Rewards.html
@@ -256,38 +256,36 @@
             </ul>
         </div>
     </div>
-    <div class=" flex    md:hidden   flex-col    items-center justify-center mt-[55px] ">
+    <div class=" flex    md:hidden   flex-col    items-center justify-center mt-[30px] ">
 
         <img src="./assets/blackclientbann.jpg" style="  background-position: 50% 50%; background-size: cover;" class=" z-[-1]
         absolute md:h-[60%] h-[40%]  w-full object-cover bg-cover bg-bottom" alt="">
-        <img src="./assets/Left.png"  id="goBackButton" class="   w-10  md:hidden block  relative !-top-10  -left-36 cursor-pointer h-auto" alt="">
+        <img src="./assets/Left.png"  id="goBackButton" class="   w-10  md:hidden block  relative !-top-4   -left-40 cursor-pointer h-auto" alt="">
         <h1 class=" text-[26px] leading-[33px] font-[800] text-center" style=" 
-        background: linear-gradient(90deg, #FFFFFF 0%, #1F41BB 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+        color: #ffffffc8;
       ">Don’t miss out claim your rewards now!</h1>
     </div>
 
     <img src="./assets/Left.png"  id="goBackButton1" class=" absolute w-10  md:block hidden left-10 top-28  cursor-pointer h-auto" alt="">
-    <div class=" hidden md:block -z-[10]  -mt-10  px-20    w-full bg-cover bg-center h-screen relative "
-        id="background-"
-        style="background-image: url(./assets/RewardsBanner.png);  background-position: 50% 50%; background-size: cover;">
+    <div class="hidden md:block -z-[10] -mt-10 px-20 w-full bg-cover bg-bottom h-[50vh] relative"
+    id="background-"
+    style="background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 81%, #FFFFFF 100%), url(./assets/RewardsBanner.png);
+           background-position: 50% 50%;
+           background-size: cover;">
 
-        <div class="container mx-auto  items-center justify-start h-full flex   ">
-
-            <h1 class="text-white text-[78px]  font-bold text-left leading-[87px]">
-                Don't miss out <br>
-                claim your reward <br> now!
-            </h1>
-        </div>
-
+    <div class="container mx-auto w-screen items-center justify-start h-full flex">
+        <!-- style="" -->
+        <h1 class="text-white mt-14 font-bold text-left" style="font-size: clamp(40px, 5vw, 78px); line-height: clamp(45px, 6vw, 87px);">
+            Don't miss out <br>
+            claim your reward now!
+        </h1>
     </div>
-
+</div>
 
 
 
     <!-- 2nd Section -->
-    <div class=" px-4 md:px-20 py-36">
+    <div class=" px-4 md:px-20 py-6">
         <div
             class="container md:text-[22px]  font-semibold  mx-auto flex justify-center items-center gap-10 md:gap-40 py-10">
             <h1 class="text-[#1F41BB] tab-header   cursor-pointer" data-tab="Rewards">Rewards</h1>
