--- a/bCompany.html
+++ b/bCompany.html
@@ -251,7 +251,7 @@
         </div>
     </div>
     <img src="./assets/blackclientbann.jpg" style="  background-position: 50% 50%; background-size: cover;" class=" z-[-1]
-      absolute md:h-[60%] h-[40%]  w-full object-cover bg-cover bg-bottom" alt="">
+      absolute md:h-[40%] h-[40%]  w-full object-cover bg-cover bg-bottom" alt="">
 
     <div class="md:h-fit    md:mt-0 mt-32 md:pl-32 md:pt-28 pb-4 w-full bg-cover bg-bottom relative " id="background-">
         <!-- style="background-image: url(./assets/companypage.jpeg);  background-position: 50% 50%; background-size: cover;"> -->
@@ -259,10 +259,10 @@
 
 
 
-        <div class="container   mx-auto flex   ">
+        <div class="container  -mt-28 md:-mt-20  mx-auto flex   ">
             <img src="./assets/Left.png" id="goBackButton"
-                class=" absolute w-10 left-4 md:left-10 md:top-10 -top-28 cursor-pointer h-auto" alt="">
-            <div class=" flex items-center md:hidden block -top-28 right-4 absolute text-white rounded-full px-2 py-1 bg-white/15 backdrop-blur gap-1"
+                class=" absolute w-10 left-4 md:left-10 md:top-10 top-8 cursor-pointer h-auto" alt="">
+            <div class=" flex items-center md:hidden block  top-14 md:-top-28 right-4 absolute text-white rounded-full px-2 py-1 bg-white/15 backdrop-blur gap-1"
                 style="border: 1px solid #FFFFFF33">
                 <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -316,7 +316,7 @@
                     </div>
 
                     
-                    <div class=" mt-16    text-[15px] items-center md:hidden block  gap-6 flex ">
+                    <div class=" mt-6   text-[15px] items-center md:hidden block  gap-6 flex ">
                         <h1 class="hover:text-[#1F41BB] text-[#1F41BB] cursor-pointer tab-header" data-tab="Rimark">
                             Rimark</h1>
                         <h2 class="hover:text-[#1F41BB] cursor-pointer tab-header" data-tab="Info">Info & Hours</h2>
@@ -328,7 +328,7 @@
                     Subscription : Free
                 </div>
                 <a href="/pricing.html">
-                <div  class=" font-semibold text-white bg-white/20  md:mt-0 mt-2 md:mr-0 mr-2 hover:bg-black/40 cursor-pointer px-4 w-fit  text-xs md:text-base   py-2 rounded-lg" style="backdrop-filter: blur(4px);box-shadow: 0px 4px 21px 0px #E8EBF166;border: 1px solid #FFFFFF ;backdrop-filter: blur(9px)">
+                <div  class=" font-semibold text-white bg-white/20  md:mt-0 mt-24 md:mr-0 mr-2 hover:bg-black/40 cursor-pointer px-4 w-fit  text-xs md:text-base   py-2 rounded-lg" style="backdrop-filter: blur(4px);box-shadow: 0px 4px 21px 0px #E8EBF166;border: 1px solid #FFFFFF ;backdrop-filter: blur(9px)">
                     upgarde
                 </div>
                 </a>
@@ -435,12 +435,9 @@
 
 
 
-        <div class=" md:pb-0 pb-20 md:overflow-normal overflow-hidden flex flex-col items-center justify-center tab-content md:w-[40%] gap-4 md:gap-10  "
+        <div class=" -mt-6 md:pb-0 pb-20 md:overflow-normal overflow-hidden flex flex-col items-center justify-center tab-content md:w-[40%] gap-4 md:gap-10  "
             id="Rimark">
-            <div class=" md:block hidden flex flex-col -ml-14 py-4 items-start gap">
-                <h1 class=" text-[40px] font-bold">Lorem ipsum</h1>
-                <h2 class=" text-[#BDBDBD] text-[18px]">Turpis facilisis tempor pulvinar in lobortis ornare magna.</h2>
-            </div>
+           
 
 
             <div id="Rimarks" class="tab-content overflow-hidden md:-mt-10  w-full grid md:grid-cols-1  px-4 gap-10">
@@ -450,7 +447,7 @@
 
         </div>
 
-        <div class=" md:mt-40 md:w-[40%]    px-6 md:px-10    md:block hidden  tab-content " id="Info">
+        <div class=" md:-mt-10 md:w-[40%]    px-6 md:px-10    md:block hidden  tab-content " id="Info">
             <div class="bg-white rounded-[12px]  p-6" style="box-shadow: 0px 4px 24px 0px #0000001F;">
                 <div class="flex justify-center py-2 items-center space-x-4">
                     <img src="/assets//burgerking.png" alt="Burger King Logo"
