--- a/bRewards.html
+++ b/bRewards.html
@@ -243,14 +243,16 @@
         </div>
     </div>
 
-    <div class=" hidden md:block z-0  px-20    w-full bg-cover bg-center h-screen relative " id="background-"
-        style="background-image: url(./assets/Rewards2.png);  background-position: 50% 50%; background-size: cover;">
+ <div class="hidden md:block z-0 px-20 w-full bg-cover bg-center h-[45vh] relative" id="background-"
+    style="background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 90.9%, #FFFFFF 100%), url(./assets/Rewards2.png);
+           background-position: 50% 50%;
+           background-size: cover;">
 
         <div class="container mx-auto  items-center justify-start h-full flex    ">
             <img src="./assets/Left.png" id="goBackButton"
                 class=" absolute   w-10 md:left-10 md:top-20  cursor-pointer h-auto" alt="">
 
-            <h1 class="text-white text-[78px] font-bold text-left leading-[87px]">
+            <h1 class="text-white text-[70px] mt-12 font-bold text-left leading-[80px]">
                 Create coupons to <br>
                 make customer to <br> visit often !
             </h1>
@@ -272,7 +274,7 @@
 
 
     <!-- 2nd Section -->
-    <div class=" px-4 md:px-20 py-36">
+    <div class=" px-4 md:px-20 md:mt-0 mt-32 py-2 pb-32">
         <div
             class="container md:text-[22px]  font-semibold  mx-auto flex justify-center items-center gap-10 md:gap-40 py-10">
             <h1 class="text-[#1F41BB] tab-header  cursor-pointer" data-tab="Expired">Create
